# content-manager

./: pyproject.toml
src/src/: settings.py
